# flutter_stockfish_plugin

./: .gitignore  .metadata  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  example.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_stockfish_plugin2_example/: MainActivity.kt
example/android/app/src/main/kotlin/com/example/flutter_stockfish_plugin_example/: MainActivity.kt
example/android/gradle/wrapper/: gradle-wrapper.properties
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/test/: stockfish_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: stockfish.dart  stockfish_bindings.dart  stockfish_c_bindings_generated.dart  stockfish_native_bindings.dart  stockfish_state.dart  stockfish_web_bindings.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt  create_stockfish.sh  fixes.h  small_fixes.cpp  small_fixes.h  stockfish.cpp  stockfish.h  stream_fix.cpp  stream_fix.h
src/Stockfish/src/: benchmark.cpp  main.cpp  memory.cpp  misc.cpp  misc.h  tt.cpp  tune.cpp  uci.cpp  ucioption.cpp
src/Stockfish/src/nnue/: evaluate_nnue.cpp  nnue_misc.cpp
src/Stockfish/src/syzygy/: tbprobe.cpp
test/: stockfish_test.dart
web/: CMakeLists.txt  js_bindings.js
windows/: CMakeLists.txt
